[tool.poetry]
name = "referalsystemmodule"
version = "0.1.0"
description = ""
authors = ["Abdulatif Abdyrazakov <abdyrazakov.1357@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-decouple = "^2.1"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
